eZ Online Editor MCE extension Changelog

5.0beta
* clicking search buttons does not work (hides link dialog)
* updated TinyMCE to 3.0.7
* fixed some ie6 issues in browse / search and custom tag popup
* let link / anchor buttons edit currently selected link / anchor

0.99
* embed image issues ( 'view' not correct and not changable )
* paging on embed search added
* ed.selection.select() not working in Safari and Opera, switched to passing node as window param
* let theme handle non editable content (embed tags) because of ed.selection.select() issue, removed plugin
* custom tags now properly switching tags from div to span and back when changed.
* made all poup dialogs use one unified and extendable javascript api for common funcions
* clearing float on embed and custom block tags
* Fixed nested custom inline tags
* merging cells when cells where cells where TH type fixed
* removed support for Opera v9.2 ( now only 9.5 and higher is supported )
* some changes with float / align on embed elements
* completed i18n translation, using a custom i18n generator (classes/ezoepackerfunctions.php)
  to generate i18n strings for TinyMCE
* Updated TinyMCE to 3.0.6.2
* now possible to disable packer with DevelopmentMode setting in ezoe.ini
* browse and search in link dialog + icons for selection in search and browse
* don't add display:block on embed images
* use TinyMce styles in dialogs
* Not able to delete embed tags with backspace / del button
* inline selector on embed tags dialog not working in IE
* supported old style attachment icon on embed tags by defining classes that don't have a image attribute
  as image in ImageClassIdentifiers (site.ini)
* disable list buttons inside headings


0.98
* string translations
* fix for bug when custom attribute or custom tag had a '_' in name
* switched custom block tag to use div tag to work better in TinyMCE
  (inline custom tags use span for the same reason)
* fixed search bug
* apply to whole column and row on table cell dialog